intégration du panier

--- a/squelettes/content/401.html
+++ b/squelettes/content/401.html
@@ -5,6 +5,8 @@
 	<header class="cartouche">
 		<h1 class="h1"><:pass_erreur:>[ (#ENV{status})]</h1>
 	</header>
+    [(#REM)Le panier]
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}	
 	[<section class="chapo">(#ENV{erreur})</section>]
 	#FORMULAIRE_LOGIN{#ENV{cible},'',0}
 </article>
