--- a/squelettes/content/article.html
+++ b/squelettes/content/article.html
@@ -11,7 +11,8 @@
 		<h1 class="h1 #EDIT{titre}">#TITRE</h1>
 		[<p class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</p>]
 	</header>
-
+    [(#REM)Le panier]
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
 	[<section class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</section>]
 	[<section class="#EDIT{texte} texte surlignable">
 			[(#LOGO_ARTICLE|image_reduire{200,200})]
