--- a/squelettes/content/plan.html
+++ b/squelettes/content/plan.html
@@ -5,9 +5,7 @@
 		<h1 class="h1"><:plan_site:></h1>
 	</header>
     [(#REM)Le panier]
-    <aside id="mon_panier" class="fenetre_container">
-       #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier,objet=article,id_objet=#GET{id_article},env}
-    </aside> 
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
 <BOUCLE_secteurs(RUBRIQUES) {racine} {par titre}>
 
 	<h2 class="h2"><a href="#URL_RUBRIQUE">#TITRE</a></h2>
