--- a/squelettes/content/recherche.html
+++ b/squelettes/content/recherche.html
@@ -5,9 +5,7 @@
 		<p class="soustitre">&#171;&nbsp;(#RECHERCHE)&nbsp;&#187;</p>
 	</header>]
     [(#REM)Le panier]
-    <aside id="mon_panier" class="fenetre_container">
-       #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier,objet=article,id_objet=#GET{id_article},env}
-    </aside> 
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
 	<INCLURE{fond=liste/articles-recherche,env,ajax} />
 
 	<INCLURE{fond=liste/rubriques-recherche,env,ajax} />
