--- a/squelettes/content/404.html
+++ b/squelettes/content/404.html
@@ -5,5 +5,7 @@
 	<header class="cartouche">
 		<h1 class="h1"><:pass_erreur:> 404</h1>
 	</header>
+    [(#REM)Le panier]
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}	
 	[<section class="chapo">(#ENV{erreur})</section>]
 </article>
