--- a/squelettes/content/rubrique-realisations.html
+++ b/squelettes/content/rubrique-realisations.html
@@ -3,10 +3,8 @@
         <header class="cartouche">
             <h1 class="h1 #EDIT{titre}">#TITRE</h1>
         </header>
-        [(#REM)Le panier]
-        <aside id="mon_panier" class="fenetre_container">
-           #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier,objet=article,id_objet=#GET{id_article},env}
-        </aside>         
+    [(#REM)Le panier]
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}       
         [<section class="#EDIT{texte} chapo">
             (#TEXTE)
          </section>]
