--- a/squelettes/content/site.html
+++ b/squelettes/content/site.html
@@ -5,9 +5,7 @@
         <h1 class="h1 #EDIT{nom_site}">#NOM_SITE</h1>
     </header>
     [(#REM)Le panier]
-    <aside id="mon_panier" class="fenetre_container">
-       #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier}
-    </aside> 
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
   [<section class="#EDIT{descriptif} chapo">(#DESCRIPTIF)</section>]
   [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out">(#URL_SITE|couper{80})</a></section>]
 </article>
