--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -1,3 +1,4 @@
+#CACHE{0}
 #SET{exclus,#ARRAY}
 [(#REM)Les produits dans le panier]
     <BOUCLE_panier(PANIERS_LIENS){id_panier=#SESSION{id_panier}}{objet=prix_objet}>
@@ -7,30 +8,29 @@
     </BOUCLE_panier>
 
 <BOUCLE_art(ARTICLES){id_article=#ID_OBJET}>
-<dl>
-   <dt class="row_[(#COMPTEUR_BOUCLE|alterner{odd, even})]"><h3>#TITRE</h3></dt>
-        <dd class="prix">
+<div>
+    <div class="prix">
             [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})])
-       </dd>       
+     </div>       
         
         [(#ID_ARTICLE|in_array{#ENV{utilises}}|ou{#ENV{panier}|=={non}}|?{
-            <dd class="compris_pack">
+            <div class="compris_pack">
             <:websimple:compris_pack:>
             ,
-            <dd class="ajouter_au_panier">
+            <div class="ajouter_au_panier">
             [(#ID_ARTICLE|in_array{#GET{exclus}}|?{
-                <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/>
+                #TITRE <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> 
                 ,
 
             #SET{retour,#SELF|parametre_url{retour,ok}}
-            [(#BOUTON_ACTION{<:websimple:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})]          
+            [(#BOUTON_ACTION{<:websimple:action_ajouter:> #TITRE,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})]          
                 })]
  
             })]
 
-        </dd>
-   
-</dl>
+        </div>
+   <br class="nettoyeur"/>
+</div>
 </BOUCLE_art>
 </B_art>
 [(#ENV{retour}|oui)
