eviter le doublons

--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -8,7 +8,9 @@
 		[<p class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</p>]
 	</header>
 	[(#REM)Le panier]
+	[(#ENV{panier}|!={non}|oui)
      #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
+     ]
 	<section class="body_content">
 	    <aside class="right">
         [(#REM)Les Contenus liés]
