--- a/squelettes/inclure/mon_panier.html
+++ b/squelettes/inclure/mon_panier.html
@@ -11,7 +11,7 @@
     jQuery(document).ready(function(){
           $("#mon_panier h2.#ENV{objet}_#ID_OBJET").mouseover(function() {
             if($("#mon_panier .details").length!=0){
-              $("#mon_panier .details").toggle('slow');
+              $("#mon_panier .details").toggle(1000);
             } 
             else ajaxReload('mon_panier', {
                 args:{
