--- a/squelettes/content/site.html
+++ b/squelettes/content/site.html
@@ -6,13 +6,15 @@
     </header>
     [(#REM)Le panier]
      #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
-  [<section class="#EDIT{descriptif} chapo">(#DESCRIPTIF)</section>]
-  [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out">(#URL_SITE|couper{80})</a></section>]
+  <section class="body_content">   
+    [<aside class="right">
+        [(#REM)Les Contenus liés]
+        (#INCLURE{fond=inclure/contenu_lie_a,objet=site,id_objet=#ID_SYNDIC,env})
+    </aside> ] 
+      [<section class="#EDIT{descriptif} chapo">(#DESCRIPTIF)</section>]
+      [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out">(#URL_SITE|couper{80})</a></section>]
+  </section>
 </article>
-<aside class="right">
-    [(#REM)Les Contenus liés]
-    <INCLURE{fond=inclure/contenu_lie_a,objet=site,id_objet=#ID_SYNDIC,class=last,env}/>
-</aside>
 <INCLURE{fond=liste/syndicarticles,id_syndic,env,ajax} />
 
 
