--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -9,21 +9,17 @@
 
 <BOUCLE_art(ARTICLES){id_article=#ID_OBJET}>
 <div>
-    <div class="prix">
-            [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})])
-     </div>       
-        
         [(#ID_ARTICLE|in_array{#ENV{utilises}}|ou{#ENV{panier}|=={non}}|?{
             <div class="compris_pack">
             <:websimple:compris_pack:>
             ,
             <div class="ajouter_au_panier">
             [(#ID_ARTICLE|in_array{#GET{exclus}}|?{
-                #TITRE <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> 
+               [(#ENV{titre,#TITRE}|supprimer_numero|extraire_multi)] <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> 
                 ,
 
             #SET{retour,#SELF|parametre_url{retour,ok}}
-            [(#BOUTON_ACTION{<:websimple:action_ajouter:> #TITRE,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})]          
+            [(#BOUTON_ACTION{<:websimple:action_ajouter:> [(#ENV{titre,#TITRE}|supprimer_numero|extraire_multi)] [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})]),#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})]          
                 })]
  
             })]
