--- a/squelettes/inclure/panier_details.html
+++ b/squelettes/inclure/panier_details.html
@@ -1,5 +1,4 @@
 #SET{utilises,#ARRAY}
-
 <BOUCLE_cond(CONDITION){si  #ENV{voir}|oui}>
     <div class="details ajax">    
     <BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
@@ -19,10 +18,11 @@
             <BOUCLE_objets_add(SELECTION_OBJETS){objet_dest=#OBJET}{id_objet_dest=#ID_OBJET}{type_lien=hebergement}>
             #SET{prix_ht,''}
             #SET{taxe,''}
+            #SET{titre,#TITRE}
             <BOUCLE_objets_precieux_add(PRIX_OBJETS){id_objet}{objet}>
                 #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
             [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
-                <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},utilises=#GET{utilises},env}/>
+                <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},utilises=#GET{utilises},titre=#GET{titre},env}/>
             </BOUCLE_objets_precieux_add>
             </BOUCLE_objets_add>
         </div>
@@ -47,6 +47,7 @@
     </B_ispanier>
     [(#GET{contenu}|non)<strong><:paniers:panier_vide:></strong>]
     </div>
+    <br class="nettoyeur"/>
 </BOUCLE_cond>
 <div></div>
 <//B_cond>
