menu packs par défaut

--- a/squelettes/extra2/rubrique.html
+++ b/squelettes/extra2/rubrique.html
@@ -9,24 +9,7 @@
 </BOUCLE_racine>
 <B_extra2_rubrique>
 
-<BOUCLE_rub(RUBRIQUES){id_trad=3}{lang}>
-<B_articles_rubrique>
- <ul class="menu-items menu-liste box_menu">
-    <li class="item articles_rubrique menu-entree">
-        <div class="titre">
-          <a href="#URL_RUBRIQUE" title="#TITRE">[(#TITRE|couper{50})]</a>
-        </div>
-          <ul>
-            <BOUCLE_articles_rubrique(ARTICLES){id_rubrique} {par titre} {lang}>
-            <li class="row_#COMPTEUR_BOUCLE [ (#EXPOSE)]">
-            <a href="#URL_ARTICLE" title="#TITRE">[(#TITRE|couper{45})]</a>
-        </li>
-            </BOUCLE_articles_rubrique>
-        </ul>
-    </li>  
-</ul>
-    </B_articles_rubrique>
-</BOUCLE_rub>
+<INCLURE{fond=inclure/menu_packs,id_rubrique}{id_trad=3}/>
 
 <BOUCLE_extra2_rubrique(RUBRIQUES){id_rubrique=#GET{id_racine}}{tout}>
 #SET{compteur_boucle,#COMPTEUR_BOUCLE}
