changement de nom de classe

--- a/squelettes/inclure/mon_panier.html
+++ b/squelettes/inclure/mon_panier.html
@@ -19,7 +19,7 @@
                     }
                   }
                 );
-       $('#mon_panier').toggleClass('open');  
+       $('#mon_panier').toggleClass('panier_open');  
   });
 });    
 </script>
