--- a/squelettes/content/article.html
+++ b/squelettes/content/article.html
@@ -1,4 +1,4 @@
-<BOUCLE_content(ARTICLES){id_article}>
+<BOUCLE_content(ARTICLES){id_article}{si #ENV{reload}|non}>
 
 [<aside class="prix">
     (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,expl= (<:htva:>)})
@@ -43,5 +43,7 @@ NB : pour desactiver les forums de l'article, supprimez simplement la ligne ci-d
 <INCLURE{fond=inclure/forum,id_article,repondre_url=(#PARAMETRES_FORUM|url_reponse_forum),repondre_titre=<:repondre_article:>} />
 
 </BOUCLE_content>
-<div>
-</div>
+[(#ENV{reload}|oui)
+ <INCLURE{fond=content/#ENV{type-page},env} /> 
+]
+<//B_content>
