--- a/squelettes/inclure/fonctionnalites.html
+++ b/squelettes/inclure/fonctionnalites.html
@@ -1,13 +1,12 @@
-#CACHE{0}
-#SET{cookie_move,#EVAL{$_COOKIE['move']}}
-[(#GET{cookie_move}|=={off}|oui|ou{#GET{cookie_move}|non})#SET{faq,faq}]
-#SET{faq,#ENV{faq,#GET{faq}}}
-[(#GET{faq}|=={undefined}|oui)#SET{faq,faq}]
-<B_objets>
-<dl class="[(#GET{faq,flottable}) options]">  
-<BOUCLE_objets(ARTICLES){id_rubrique}{par titre}>
-#SET{compteur,#COMPTEUR_BOUCLE}
-    <INCLURE{fond=inclure/inc-options_details,id_article,faq=#GET{faq},env}/>
-</BOUCLE_objets>
-</dl>
-</B_objets>
+[(#REM) Puis on les affiche]
+<B_articles>
+<nav class="liste articles">
+    <ul>
+        <BOUCLE_articles(ARTICLES) {id_rubrique}{!par num titre,titre}>
+                <li class="item hentry">
+                    <a href="#URL_ARTICLE">#TITRE</a>
+                </li>                                                           
+        </BOUCLE_articles>
+    </ul>
+</nav>
+</B_articles>
