--- a/squelettes/inclure/menu_packs.html
+++ b/squelettes/inclure/menu_packs.html
@@ -1,4 +1,4 @@
-<BOUCLE_rub(RUBRIQUES){id_trad=3}{lang}>
+<BOUCLE_rub(RUBRIQUES){id_trad}{lang}>
     <B_articles_rubrique>
      <ul class="menu-items menu-liste box_menu">
         <li class="item articles_rubrique menu-entree">
