--- a/squelettes/content/404.html
+++ b/squelettes/content/404.html
@@ -1,7 +1,6 @@
-[(#REM) Fil d'Ariane ]
-<nav id="hierarchie"><a href="#URL_SITE_SPIP/"><:accueil_site:></a><span class="sep"> &gt; </span><strong class="on"><:pass_erreur:> 404</strong></nav>
-
 <article class="content-principal">
+        [(#REM)Le panier]
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}  
 	<header class="cartouche">
 		<h1 class="h1"><:pass_erreur:> 404</h1>
 	</header>
