--- a/squelettes/content/selection.html
+++ b/squelettes/content/selection.html
@@ -1,8 +1,9 @@
+<article class="content-principal">
+    [(#REM)Le panier]
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
     <header class="cartouche">
         <h1><:websimple:envoi_commande:></h1>
     </header>
-    [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
 <BOUCLE_contact(CONTACTS){id_auteur=#SESSION{id_auteur}}{id_auteur>0}{0,1}>
  [(#ENV{message}|=={ok}|non)
     [<div id="abonne_coord" class="ajax">  
@@ -33,3 +34,4 @@
     ]   
     </div>
 <//B_contact>
+</article>
