--- a/squelettes/extra2/article.html
+++ b/squelettes/extra2/article.html
@@ -1,1 +1,4 @@
-<INCLURE{fond=extra2/rubrique,id_article,id_rubrique,env}/>
+<BOUCLE_rub(RUBRIQUES){id_rubrique}>#SET{id_trad,#ID_TRAD}</BOUCLE_rub>
+
+<INCLURE{fond=extra2/rubrique,id_article,id_rubrique,env,id_trad=#GET{id_trad}}/>
+
