--- a/squelettes/extra2/site.html
+++ b/squelettes/extra2/site.html
@@ -1,4 +1,7 @@
 <INCLURE{fond=inclure/menu_packs,id_rubrique,id_trad=3,lang}/>
 <BOUCLE_content(SITES){id_syndic}>
-[(#LOGO_SITE|image_reduire{150,100})]
+[(#LOGO_SITE|image_reduire{245,*})]
 </BOUCLE_content>
+<br class="nettoyeur"/>
+
+<INCLURE{fond=inclure/menus_sites,id_rubrique}/>
