--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -8,6 +8,10 @@
     </BOUCLE_panier>
 
 <BOUCLE_art(ARTICLES){id_article=#ID_OBJET}>
+#SET{titre,#TITRE}
+<BOUCLE_trad(ARTICLES){traduction}{lang=#ENV{lang}}>
+    #SET{titre,#TITRE}
+</BOUCLE_trad>
 <div>
         [(#ID_ARTICLE|in_array{#ENV{utilises}}|ou{#ENV{panier}|=={non}}|?{
             <div class="compris_pack">
@@ -15,11 +19,11 @@
             ,
             <div class="ajouter_au_panier">
             [(#ID_ARTICLE|in_array{#GET{exclus}}|?{
-               [(#ENV{titre,#TITRE}|supprimer_numero|extraire_multi)] <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> 
+               [(#ENV{titre,#GET{titre}}|supprimer_numero|extraire_multi)] <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> 
                 ,
 
             #SET{retour,#SELF|parametre_url{retour,ok}}
-            [(#BOUTON_ACTION{<:websimple:action_ajouter:> [(#ENV{titre,#TITRE}|supprimer_numero|extraire_multi)] [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})]),#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})]          
+            [(#BOUTON_ACTION{<:websimple:action_ajouter:> [(#ENV{titre,#GET{titre}}|supprimer_numero|extraire_multi)] [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})]),#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})]          
                 })]
  
             })]
