--- a/squelettes/header/dist.html
+++ b/squelettes/header/dist.html
@@ -1,6 +1,6 @@
 <div class="accueil clearfix">
 	[<a rel="start home" href="#URL_SITE_SPIP/" title="<:accueil_site:>">(#LOGO_SITE_SPIP|image_reduire{300,100})</a>]
-	<strong id="nom_site_spip" class="h1"><a rel="start home" href="#URL_SITE_SPIP/" title="<:accueil_site:>">#NOM_SITE_SPIP</a></strong>
+	<div id="nom_site_spip" class="h1"><a rel="start home" href="#URL_SITE_SPIP/" title="<:accueil_site:>">[(#CHEMIN{images/websimple.png}|image_reduire{725,*}|inserer_attribut{alt,#NOM_SITE_SPIP})]</a></div>
 	[(#COMPOSITION|=={home}|oui)
 	[<div id='slogan_site_spip'>(#SLOGAN_SITE_SPIP|PtoBR)</div>]
 	]
