--- a/squelettes/extra2/rubrique.html
+++ b/squelettes/extra2/rubrique.html
@@ -15,7 +15,7 @@
 
 <B_rubriques>
     <ul class="menu-items submenu">
-    <BOUCLE_rubriques(RUBRIQUES){id_parent=#GET{id_racine}}{tout}>
+    <BOUCLE_rubriques(RUBRIQUES){id_parent=#GET{id_racine}}{id_trad!=24}{tout}>
     	<li class="item sub_item">
     	    <a class="mouseover" href="#URL_RUBRIQUE" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION">[(#TITRE|couper{50})]</a>       
     	 </li>
@@ -23,5 +23,5 @@
     </ul>
 </B_rubriques>
 
-[(#ID_TRAD|=={17}|oui)
-<INCLURE{fond=inclure/menus_sites,id_rubrique}/>]
+[(#ENV{id_trad}|=={2}|oui)
+<INCLURE{fond=inclure/menus_sites,id_rubrique=#ENV{id_trad}}/>]
