reduire les image

--- a/squelettes/content/rubrique-fonctionnalites.html
+++ b/squelettes/content/rubrique-fonctionnalites.html
@@ -6,7 +6,7 @@
             <h1 class="h1 #EDIT{titre}">#TITRE</h1>
         </header>
         [<section class="#EDIT{texte} chapo">
-            (#TEXTE)
+            (#TEXTE|image_reduire{450})
          </section>]
     </article>
     <INCLURE{fond=inclure/fonctionnalites,env,id_rubrique}/>
