--- a/squelettes/liste/syndicarticles.html
+++ b/squelettes/liste/syndicarticles.html
@@ -1,8 +1,8 @@
 [(#REM) Articles issus de la syndication ]
 <B_articles>
-<section class="liste resume articles syndic">
+<section class="liste liste_articles_syndic  menu-items">
 		#ANCRE_PAGINATION
-		<h2 class="h2"><:articles:></h2>
+		<h2 class="h2"><:websimple:articles_site:></h2>
 		<ul class="liste-items">
 				<BOUCLE_articles(SYNDIC_ARTICLES) {id_syndic} {age<180} {par date}{inverse} {pagination 10}>
 				<li class="item">
