--- a/squelettes/modeles_so/home_citation.html
+++ b/squelettes/modeles_so/home_citation.html
@@ -1,10 +1,10 @@
 <BOUCLE_citation(FORUMS){objet=site}{statut=prive}{!par date}{0,1}>
 <div class="titre">
-    [(#NOM_SITE|couper{15})]
+    <:websimple:temoignage:>
 </div>
 
 <div class="text">
-
-[(#TEXTE)]
+[<div>"(#TEXTE|textebrut)"</div>]
+<small>#TITRE</small>
 </BOUCLE_citation>
 </div>
