--- a/squelettes/content/rubrique.html
+++ b/squelettes/content/rubrique.html
@@ -3,7 +3,7 @@
      [(#REM)Le panier]
      #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
 	<header class="cartouche">
-		<h1 class="h1 #EDIT{titre}">#TITRE</1>
+		<h1 class="h1 #EDIT{titre}">#TITRE</h1>
 	</header>
         [<section class="#EDIT{texte} chapo">
             (#TEXTE)
