lien pour le logo, styler le liens vers le site

--- a/squelettes/content/site.html
+++ b/squelettes/content/site.html
@@ -11,7 +11,7 @@
         (#INCLURE{fond=inclure/contenu_lie_a,objet=site,id_objet=#ID_SYNDIC,env})
     </aside> ] 
       [<section class="#EDIT{descriptif} chapo">(#DESCRIPTIF)</section>]
-      [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out">(#URL_SITE|couper{80})</a></section>]
+      [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out h2">(#URL_SITE|couper{80})</a></section>]
   </section>
 </article>
 <INCLURE{fond=liste/syndicarticles,id_syndic,env,ajax} />
