--- a/squelettes/extra2/site.html
+++ b/squelettes/extra2/site.html
@@ -1,6 +1,8 @@
 <INCLURE{fond=inclure/menu_packs,id_rubrique,id_trad=3,lang}/>
 <BOUCLE_content(SITES){id_syndic}>
-[(#LOGO_SITE|image_reduire{245,*})]
+<div class="logo_site">
+[<a href="#URL_SITE">(#LOGO_SITE|image_reduire{245,*})</a>]
+</div>
 </BOUCLE_content>
 <br class="nettoyeur"/>
 
