--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -4,7 +4,7 @@
 <article class="content-principal">
     [(#REM)Le panier]
     [(#ENV{panier}|!={non}|oui)
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
+     <INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}/>
      ]
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
@@ -14,7 +14,7 @@
 	<section class="body_content">
     	    [<aside class="right">
     	    [(#REM)Les prix]
-    	    <INCLURE{fond=inclure/prix,id_objet=#GET{id_article},objet=article}/>
+    	    <INCLURE{fond=inclure/prix,id_objet=#GET{id_article},objet=article,ajax}/>
             [(#REM)Les Contenus liés]
                 (#INCLURE{fond=inclure/contenu_lie,objet_dest=article,id_objet_dest=#GET{id_article},type_lien=utilise_par_site,env})
             </aside>]
