--- a/squelettes/content/article.html
+++ b/squelettes/content/article.html
@@ -1,34 +1,38 @@
 <BOUCLE_content(ARTICLES){id_article}{si #ENV{reload}|non}>
-
-[<aside class="prix">
-    (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,expl= (<:htva:>)})
-</aside>]
-
+ #SET{id_article,#ID_ARTICLE}
+    [(#ID_TRAD|>{0}|oui)#SET{id_article,#ID_TRAD}]
 
 <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
+        <INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}/>
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
 		<h1 class="h1 #EDIT{titre}">#TITRE</h1>
 		[<p class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</p>]
 	</header>
-
-	[<section class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</section>]
-	[<section class="#EDIT{texte} texte surlignable">
-			(#TEXTE|image_reduire{500,0})</section>
-		]
-	[<section class="#EDIT{hyperlien} hyperlien"><:voir_en_ligne:> : <a href="(#URL_SITE)" class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a></section>]
-	[<section class="#EDIT{ps} ps surlignable"><h2><:info_ps:></h2>(#PS|image_reduire{500,0})</section>]
-
-	[(#REM) Gestion du portfolio et des documents ]
-	[(#INCLURE{fond=inclure/documents,id_article})]
-	
-	<footer>
-		[<aside class="notes"><h2><:info_notes:></h2>(#NOTES)</aside>]
-		[(#REM) inclure de partage RS ]
-		[(#REM) bloc precedent/suivant en guise de <nav></nav> ]
-	</footer>
+    <section class="body_content">
+        [<aside class="right">
+        [(#REM)Les prix]
+        <INCLURE{fond=inclure/prix,id_objet=#GET{id_article},objet=article,ajax}/>
+        [(#REM)Les Contenus liés]
+            (#INCLURE{fond=inclure/contenu_lie,objet_dest=article,id_objet_dest=#GET{id_article},type_lien=utilise_par_site,env})
+        </aside>]              
+    	[<section class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</section>]
+    	[<section class="#EDIT{texte} texte surlignable">
+    			(#TEXTE|image_reduire{500,0})</section>
+    		]
+    	[<section class="#EDIT{hyperlien} hyperlien"><:voir_en_ligne:> : <a href="(#URL_SITE)" class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a></section>]
+    	[<section class="#EDIT{ps} ps surlignable"><h2><:info_ps:></h2>(#PS|image_reduire{500,0})</section>]
+    
+    	[(#REM) Gestion du portfolio et des documents ]
+    	[(#INCLURE{fond=inclure/documents,id_article})]
+    	
+    	<footer>
+    		[<aside class="notes"><h2><:info_notes:></h2>(#NOTES)</aside>]
+    		[(#REM) inclure de partage RS ]
+    		[(#REM) bloc precedent/suivant en guise de <nav></nav> ]
+    	</footer>
+	</section>
 </article>
 
 [(#REM) Petition :
