--- a/squelettes/inclure/panier_details.html
+++ b/squelettes/inclure/panier_details.html
@@ -13,7 +13,7 @@
             #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
             [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
             [(#PRIX|>{0}|?{#SET{ttc,oui},#SET{ttc,''})}]   
-                <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},utilises=#GET{utilises},env,ajax}/>
+                <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},utilises=#GET{utilises},env}/>
             </BOUCLE_objets_precieux>
             <BOUCLE_objets_add(SELECTION_OBJETS){objet_dest=#ENV{objet,article}}{id_objet_dest=#ENV{id_objet,113}}{type_lien=hebergement}>
             #SET{prix_ht,''}
@@ -35,7 +35,7 @@
         #SET{retour,#SELF|parametre_url{retour,ok}}
        #FORMULAIRE_PANIER
         <BOUCLE_ispanier(CONDITION){si #SESSION{id_panier}|oui}>
-            [(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#SELF},ajax})]
+            [(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#GET{retour}},ajax})]
             <BOUCLE_article_suitepanier(ARTICLES){id_rubrique=-1}>
                [(#PAGE|=={suitepanier}|oui)<div class="texte #EDIT{texte}">#TEXTE</div>]
             </BOUCLE_article_suitepanier>
