ajaxiser l'appel du panier

--- a/squelettes/content/auteur.html
+++ b/squelettes/content/auteur.html
@@ -1,7 +1,7 @@
 <BOUCLE_content(AUTEURS){id_auteur}>
 <article class="content-principal">
    [(#REM)Le panier]
-   #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}      
+   #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}      
 	<section class="vcard">[(#REM) microformat vcard]	    
 		<header class="cartouche">
 			[(#LOGO_AUTEUR|image_reduire{200,200})]
