--- a/squelettes/content/404.html
+++ b/squelettes/content/404.html
@@ -1,10 +1,8 @@
 <article class="content-principal">
         [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}  
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}  
 	<header class="cartouche">
 		<h1 class="h1"><:pass_erreur:> 404</h1>
 	</header>
-    [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}	
 	[<section class="chapo">(#ENV{erreur})</section>]
 </article>
