--- a/squelettes/content/forum.html
+++ b/squelettes/content/forum.html
@@ -1,6 +1,6 @@
 <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}
 <header class="cartouche">
     <h1 class="h1"><:poster_message:></h1>
 </header>
