--- a/squelettes/content/mot.html
+++ b/squelettes/content/mot.html
@@ -3,7 +3,7 @@
 
 <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}
   <header class="cartouche">
       [(#LOGO_MOT|image_reduire{200,200})]
       <h1 class="h1 #EDIT{titre}">#TITRE</h1>
