--- a/squelettes/content/plan.html
+++ b/squelettes/content/plan.html
@@ -2,7 +2,7 @@
 
 <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}    
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}    
 	<header class="cartouche">
 		<h1 class="h1"><:plan_site:></h1>
 	</header>
