--- a/squelettes/content/rubrique-fonctionnalites.html
+++ b/squelettes/content/rubrique-fonctionnalites.html
@@ -1,7 +1,7 @@
 <BOUCLE_content(RUBRIQUES){id_rubrique}{tout}>
     <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}           
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}           
         <header class="cartouche">
             <h1 class="h1 #EDIT{titre}">#TITRE</h1>
         </header>
