--- a/squelettes/content/rubrique-realisations.html
+++ b/squelettes/content/rubrique-realisations.html
@@ -3,7 +3,7 @@
     [(#ID_TRAD|>{0}|oui)#SET{id_rubrique,#ID_TRAD}]
     <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}             
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}             
         <header class="cartouche">
             <h1 class="h1 #EDIT{titre}">#TITRE</h1>
         </header>  
