--- a/squelettes/content/selection.html
+++ b/squelettes/content/selection.html
@@ -1,6 +1,6 @@
 <article class="content-principal">
     [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env}
+     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}
     <header class="cartouche">
         <h1><:websimple:envoi_commande:></h1>
     </header>
