--- a/squelettes/inclure/options.html
+++ b/squelettes/inclure/options.html
@@ -21,7 +21,7 @@
     <B_article_pack_base>
     <ul> 
     <BOUCLE_article_pack_base(ARTICLES){id_article=#ID_OBJET}{si #OBJET|=={article}|oui}>
-      <li><a href="#URL_ARTICE">#TITRE</a></li> 
+      <li><a href="#URL_ARTICLE">#TITRE</a></li> 
     </BOUCLE_article_pack_base>
     </ul>   
     </Barticle_pack_base>    
