--- a/squelettes/modeles_so/home_logo_auteurs.html
+++ b/squelettes/modeles_so/home_logo_auteurs.html
@@ -18,12 +18,14 @@
             |image_passe_partout{#GET{largeur},#GET{hauteur}}
             |image_recadre{#GET{largeur},#GET{hauteur}}
             |inserer_attribut{alt,#NOM}
+            |inserer_attribut{title,#NOM}            
             |inserer_attribut{class,desaturate}            
             )],
             [(#FICHIER
             |image_passe_partout{#GET{largeur},#GET{hauteur}}
             |image_recadre{#GET{largeur},#GET{hauteur}}
             |inserer_attribut{alt,#NOM}
+            |inserer_attribut{title,#NOM}                
             |inserer_attribut{class,desaturate}   
             )]            
             
